Updated show.js and fixed ids

--- a/html/movie.html
+++ b/html/movie.html
@@ -20,9 +20,9 @@
             </select>
         </form>
         <button id="playBtn">Let's Play!</button>
-        <div id="movieInfo">
-            <div id="moviePoster"></div>
-            <div id="movieText"></div>
+        <div id="mediaInfo">
+            <div id="mediaPoster"></div>
+            <div id="mediaText"></div>
         </div>
         <div id="likeOrDislikeBtns" hidden>
             <button id="likeBtn"><i class="fa-solid fa-thumbs-up"></i></button>
