--- a/html/show.html
+++ b/html/show.html
@@ -22,7 +22,9 @@
         <button id="playBtn">Let's Play!</button>
         <div id="mediaInfo">
             <div id="mediaPoster"></div>
-            <div id="mediaText"></div>
+            <div id="mediaText">
+                <div id="mediaExtraInfo"></div>
+            </div>
         </div>
         <div id="likeOrDislikeBtns" hidden>
             <button id="likeBtn"><i class="fa-solid fa-thumbs-up"></i></button>
